--- a/EcomAPI/src/main/resources/application.properties
+++ b/EcomAPI/src/main/resources/application.properties
@@ -12,4 +12,5 @@ spring.mail.username=jangobotmailer123@gmail.com
 spring.mail.password=guwzcmnttihhraye
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+logging.level.org.springframework.validation=DEBUG
 
