--- a/EcomAPI/build.gradle
+++ b/EcomAPI/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	implementation 'org.apache.commons:commons-collections4:4.4'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.5'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
