--- a/EcomAPI/build.gradle
+++ b/EcomAPI/build.gradle
@@ -29,7 +29,8 @@ dependencies {
     implementation 'com.stripe:stripe-java:22.26.0'
     implementation 'org.springframework.boot:spring-boot-starter-graphql'
     implementation 'com.google.code.gson:gson'
-	runtimeOnly 'org.postgresql:postgresql'
+	implementation 'org.postgresql:postgresql'
+	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
