--- a/EcomAPI/src/main/resources/application.properties
+++ b/EcomAPI/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # DataSource Configuration
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/postgres
+#spring.datasource.url=jdbc:postgresql://postgres-db:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=mysecretpassword
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -7,10 +8,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # RabbitMQ Configuration
-spring.rabbitmq.host=rabbitmq
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+#spring.rabbitmq.host=rabbitmq
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
 
 # Other configurations 
 okta.oauth2.client-id=0oa9vrqo11qlLeUYI5d7
